--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 .vs/ 
+# Ignore SQL Server database files
+*.mdf
+*.ldf
+*.ndf
+
+# Ignore SQL Server backup files
+*.bak
+
+# Ignore local development database files
+App_Data/
+*.db
+
+# Ignore SQL Server configuration files
+*.config
+
+# Ignore temporary files
+*.tmp
