--- a/EPR/.gitattributes
+++ b/EPR/.gitattributes
@@ -1,3 +1,6 @@
 *.js linguist-language=ignore
+*.css linguist-language=ignore
+*.html linguist-language=ignore
+
 node_modules/* linguist-vendored
 wwwroot/* linguist-vendored
